# oda-kapa-express/app.js
@@ -5,12 +5,17 @@ var app = require('express')();
 module.exports = app; // for testing
 
 var config = {
-  appRoot: __dirname, // required config
+  appRoot: __dirname // required config
 // use these two lines to define location of own swagger file
-  configDir: __dirname + '/config/swagger',
-  swaggerFile: __dirname + '/kapa-api/kapa-api.yaml'
+//  configDir: __dirname + '/config/swagger',
+//  swaggerFile: __dirname + '/kapa-api/kapa-api.yaml'
+
+
 //  testPath: __dirname + '/test'
 };
+
+//console.log(config.appRoot)
+//console.log(config.configDir)
 
 SwaggerExpress.create(config, function(err, swaggerExpress) {
   if (err) { throw err; }
@@ -21,7 +26,7 @@ SwaggerExpress.create(config, function(err, swaggerExpress) {
   var port = process.env.PORT || 10010;
   app.listen(port);
 
-  if (swaggerExpress.runner.swagger.paths['/hello']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
+  if (swaggerExpress.runner.swagger.paths['/Communication']) {
+    console.log('try this:\ncurl http://127.0.0.1:' + port + '/Communication');
   }
 });
